Experimental Deque build. Also bug fixes for other stuff